<resources>
    <string name="app_name">cgassignment2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Scout Groups</string>
    <string name="nav_header_subtitle">20083465@wit.ie</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_welcome">Welcome</string>
    <string name="add_group">Add Group</string>
    <string name="list_group">List groups</string>

    <string name="action_Add_Group">Add Group</string>
    <string name="action_List_Group">List all groups</string>
    <string name="enter_Location">Enter Group Location</string>
    <string name="GroupTitle">Welcome </string>
    <string name="Subtitle">Would you like to add a group or view the groups we already have via the menu </string>
    <string name="AddButton">Add Group</string>
    <string name="Group_Name">Group Name</string>
    <string name="enter_Name">Enter Group Name</string>
    <string name="Location">Location</string>
    <string name="save_group"> Save group </string>

    <string name="GroupsNotFound">No Groups on our system. Please go add one</string>

    <string name="messageLoading">Please Wait while we load groups that have been added</string>

    <!-- START Firebase Resources-->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="ourStory_Title">Our Story</string>
    <string name="ourStory_paragragh">We would like to thank you for checking our our App. We hope it finds it useful</string>
    <string name="action_story">Our Story</string>

</resources>