<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_welcome"
            android:icon="@drawable/e1197754a44d9407e4cdbf4678ae3487"
            android:title="@string/menu_welcome" />
        <item
            android:id="@+id/add_group"
            android:icon="@drawable/pluslist"
            android:title="@string/add_group" />
        <item
            android:id="@+id/list_group"
            android:icon="@drawable/iconforlist"
            android:title="@string/list_group" />
    </group>
    <item android:title="Access Control">
        <menu>
            <item
                android:id="@+id/signout"
                android:icon="@android:drawable/ic_menu_revert"
                android:onClick="signOut"
                android:title="@string/sign_out" />
        </menu>
    </item>
</menu>